make sure we also reset ul spacing by default

--- a/packages/dnb-ui-lib/src/style/themes/dnb-theme-ui.scss
+++ b/packages/dnb-ui-lib/src/style/themes/dnb-theme-ui.scss
@@ -127,6 +127,7 @@ fieldset {
 
 ul,
 ol {
+  margin: 0;
   padding-left: 2rem;
 
   font-size: 1em;
